# nas_file_organizer

./: .gitignore  CHANGELOG.md  Dockerfile  JOURNAL.md  LICENSE.md  PROJECT_TRACKER.md  README.md  cache.db  docker-compose.dev.yml  docker-compose.yml  old_readme.txt  pyproject.toml  rules.yaml  run.ps1  tesseract_test.py
docs/: CASE_STUDY.md  case_study.md
nas_file_organizer/adapters/: __init__.py  cli.py  gui_tk.py  train_cli.py  watch.py  web.py
nas_file_organizer/core/: __init__.py  cache.py  io_utils.py  models.py  services.py
nas_file_organizer/db/: migrate.py
nas_file_organizer/ml/: hybrid.py  predict.py  train.py  utils.py
nas_file_organizer/routes/: review_router.py
nas_file_organizer/web/: metrics.py  review_router.py
schemas/: phase4.sql
templates/: history.html  index.html  review.html  settings_schedule.html
